* Don't reset date/datetime/time to None when it is invalid

Version 6.8.2 - 2023-09-06
* Bug fixes (see mercurial logs for details)


Version 6.8.1 - 2023-05-17
--------------------------
* Bug fixes (see mercurial logs for details)


Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Include events to logs
* Support scroll time on calendar view
* Save and Restore tree state on List Form
* Do record (pre)validation and saving on selection change for list-form views
* Eagerly read string value of selection fields
* Do not select first record by default
* Use ``&`` and ``|`` as boolean operator in search widget
* Use toggle button and label on translate dialog
* Support border type of images
* Manage domain on id in single value list as unique
* Do not validate domain nor enforce uniqueness for empty fields unless they're required or invisible
* Display the number of selected records on xxx2Many

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Support authentication services
* Check server version

Version 6.4.0 - 2022-05-02
* Bug fixes (see mercurial logs for details)
* Support notification message
* Allow Reference to be edited from tree view
* Set ECMAScript version to 6
* Manage optional column
* Display the number of selected records
* Humanize the count result
* Add limit to search_count
* Call view_get for board view
* Limit board action domain to active id and ids
* Manage creatable attribute of view

Version 6.2.0 - 2021-11-01
* Bug fixes (see mercurial logs for details)
* Support grouping attribute
* Add expander on tree to fold or unfold selected rows
* Support monetary and symbol field attributes
* Support digits from relation field
* Add accesskey to widgets and buttons
* Support Binary field in CSV import/export

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Use appropriate types for email and url widgets