@@ -1,3 +1,4 @@
+* Use grid layout for form container
 * Don't reset date/datetime/time to None when it is invalid
 
 Version 6.8.2 - 2023-09-06
